--- a/housing/styles.css
+++ b/housing/styles.css
@@ -186,6 +186,10 @@ body {
     background-color: rgba(245, 140, 39, 0.8);
 }
 
+.legend-color.purchased {
+    background-color: rgba(48, 104, 194, 1);
+}
+
 @media (max-width: 1000px) {
     .map-container {
         min-width: 1000px;
